fix package-local access
GitOrigin-RevId: 384f3abbff80e42e94e4c12ebe69c9d0a7e811b3