@@ -1,4 +1,4 @@
-// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.editor.impl;
 
 import com.intellij.diagnostic.Dumpable;
@@ -25,8 +25,8 @@ import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.TestOnly;
 
 import java.awt.*;
-import java.util.List;
 import java.util.*;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
@@ -37,22 +37,22 @@ import static com.intellij.openapi.editor.impl.InlayKeys.OFFSET_BEFORE_DISPOSAL;
 public final class InlayModelImpl implements InlayModel, PrioritizedDocumentListener, Disposable, Dumpable {
   private static final Logger LOG = Logger.getInstance(InlayModelImpl.class);
 
-  private static final Comparator<InlineInlayImpl> INLINE_ELEMENTS_COMPARATOR = Comparator
-    .comparingInt((InlineInlayImpl i) -> i.getOffset())
+  private static final Comparator<InlineInlayImpl<?>> INLINE_ELEMENTS_COMPARATOR = Comparator
+    .comparingInt((InlineInlayImpl<?> i) -> i.getOffset())
     .thenComparing(i -> i.isRelatedToPrecedingText())
     .thenComparing(i -> -i.myPriority);
-  private static final Comparator<BlockInlayImpl> BLOCK_ELEMENTS_PRIORITY_COMPARATOR = Comparator
+  private static final Comparator<BlockInlayImpl<?>> BLOCK_ELEMENTS_PRIORITY_COMPARATOR = Comparator
     .comparingInt(i -> -i.myPriority);
-  private static final Comparator<BlockInlayImpl> BLOCK_ELEMENTS_COMPARATOR = Comparator
-    .comparing((BlockInlayImpl i) -> i.getPlacement())
+  private static final Comparator<BlockInlayImpl<?>> BLOCK_ELEMENTS_COMPARATOR = Comparator
+    .comparing((BlockInlayImpl<?> i) -> i.getPlacement())
     .thenComparing(i -> i.getPlacement() == Inlay.Placement.ABOVE_LINE ? i.myPriority : -i.myPriority);
-  private static final Comparator<AfterLineEndInlayImpl> AFTER_LINE_END_ELEMENTS_OFFSET_COMPARATOR = Comparator
-    .comparingInt((AfterLineEndInlayImpl i) -> i.getOffset())
+  private static final Comparator<AfterLineEndInlayImpl<?>> AFTER_LINE_END_ELEMENTS_OFFSET_COMPARATOR = Comparator
+    .comparingInt((AfterLineEndInlayImpl<?> i) -> i.getOffset())
     .thenComparing(i -> !i.mySoftWrappable)
     .thenComparingInt(i -> -i.myPriority)
     .thenComparingInt(i -> i.myOrder);
-  private static final Comparator<AfterLineEndInlayImpl> AFTER_LINE_END_ELEMENTS_COMPARATOR = Comparator
-    .comparing((AfterLineEndInlayImpl i) -> !i.mySoftWrappable)
+  private static final Comparator<AfterLineEndInlayImpl<?>> AFTER_LINE_END_ELEMENTS_COMPARATOR = Comparator
+    .comparing((AfterLineEndInlayImpl<?> i) -> !i.mySoftWrappable)
     .thenComparingInt(i -> -i.myPriority)
     .thenComparingInt(i -> i.myOrder);
 
@@ -202,10 +202,10 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
   }
 
   @Override
-  public <T extends EditorCustomElementRenderer> @NotNull Inlay<T> addAfterLineEndElement(int offset,
-                                                                                          boolean relatesToPrecedingText,
-                                                                                          @NotNull T renderer) {
-   return addAfterLineEndElement(offset, relatesToPrecedingText, true, 0, renderer);
+  public <T extends EditorCustomElementRenderer> @NotNull Inlay<@NotNull T> addAfterLineEndElement(int offset,
+                                                                                                   boolean relatesToPrecedingText,
+                                                                                                   @NotNull T renderer) {
+    return addAfterLineEndElement(offset, relatesToPrecedingText, true, 0, renderer);
   }
 
   @Override
@@ -282,7 +282,7 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
   public @NotNull List<Inlay<?>> getBlockElementsForVisualLine(int visualLine, boolean above) {
     int visibleLineCount = myEditor.getVisibleLineCount();
     if (visualLine < 0 || visualLine >= visibleLineCount || myBlockElementsTree.size() == 0) return Collections.emptyList();
-    List<BlockInlayImpl> result = new ArrayList<>();
+    List<BlockInlayImpl<?>> result = new ArrayList<>();
     int startOffset = myEditor.visualLineStartOffset(visualLine);
     int endOffset = visualLine == visibleLineCount - 1 ? myEditor.getDocument().getTextLength()
                                                        : myEditor.visualLineStartOffset(visualLine + 1) - 1;
@@ -292,7 +292,10 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
       }
       return true;
     });
-    if (above) Collections.reverse(result); // matters for inlays with equal priority
+    if (above) {
+      // matters for inlays with equal priority
+      Collections.reverse(result);
+    }
     result.sort(BLOCK_ELEMENTS_COMPARATOR);
     //noinspection unchecked
     return (List)result;
@@ -477,7 +480,9 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
 
   @Override
   public @NotNull List<Inlay<?>> getAfterLineEndElementsInRange(int startOffset, int endOffset) {
-    if (!hasAfterLineEndElements()) return Collections.emptyList();
+    if (!hasAfterLineEndElements()) {
+      return List.of();
+    }
     List<AfterLineEndInlayImpl<?>> range =
       getElementsInRange(myAfterLineEndElementsTree, startOffset, endOffset, Predicates.alwaysTrue(), AFTER_LINE_END_ELEMENTS_OFFSET_COMPARATOR);
     //noinspection unchecked
@@ -486,8 +491,11 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
 
   @Override
   public @NotNull <T> List<Inlay<? extends T>> getAfterLineEndElementsInRange(int startOffset, int endOffset, @NotNull Class<T> type) {
-    if (!hasAfterLineEndElements()) return Collections.emptyList();
-    List<AfterLineEndInlayImpl> range =
+    if (!hasAfterLineEndElements()) {
+      return List.of();
+    }
+
+    List<AfterLineEndInlayImpl<?>> range =
       getElementsInRange(myAfterLineEndElementsTree, startOffset, endOffset, inlay -> type.isInstance(inlay.myRenderer),
                          AFTER_LINE_END_ELEMENTS_OFFSET_COMPARATOR);
     //noinspection unchecked
@@ -500,7 +508,7 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
     if (!hasAfterLineEndElements() || logicalLine < 0 || logicalLine > 0 && logicalLine >= document.getLineCount()) {
       return Collections.emptyList();
     }
-    List<AfterLineEndInlayImpl> result = new ArrayList<>();
+    List<AfterLineEndInlayImpl<?>> result = new ArrayList<>();
     int startOffset = document.getLineStartOffset(logicalLine);
     int endOffset = document.getLineEndOffset(logicalLine);
     myAfterLineEndElementsTree.processOverlappingWith(startOffset, endOffset, inlay -> {
